# model-serving-github-actions-render

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pipeline.joblib  pyproject.toml  requirements.txt
.github/workflows/: cicd.yml
src/: app_solution.py  test_app.py
